refactor: remove lunatic patches (#913)
* test(dynamic table): clean up expected lunatic

* test: unit test for lunatic scalar variable

* build: bump lunatic model to 3.3.4

* refactor: remove patches for lunatic cleaning

* refactor: remove patches for lunatic resizing

* refactor: remove patches for lunatic missing block

* chore: remove unused mockito lib

Note: using it shows a warning since java 21.

* test(label): remove usage of deprecated lunatic methods

* refactor: remove patches in lunatic serializer

* chore: maven local at first for dependency resolution

So that maven local is checked first to resolve dependencies.

* chore: version 3.17.2

* test(variables): remove redundant test

This test exists in Lunatic-Model.